--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         dotnet-version: ${{ matrix.version.setup }}
     - name: Restore dependencies
-      run: dotnet restore --runtime ${{ matrix.version.target }}
+      run: dotnet restore
     - name: Build
       run: dotnet build --no-restore --framework ${{ matrix.version.target }}
     - name: Test
