build: largely undo the setup/target bond
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --framework ${{ matrix.version.target }} --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
+      run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
