--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        version: [ {setup: '6.x', target: "net6.0"}, {setup: '7.x', target: "net7.0"}, {setup: '8.x', target: "net8.0"}]
+        version: [ {setup: '6.x', target: "net6.0"}, {setup: '7.x', target: "net7.0"}, {setup: '8.x', target: "net7.0"}]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -28,9 +28,22 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ matrix.version.setup }}
+    - name: Test PowerShell
+      shell: pwsh
+      run: |
+        cd OSLC4Net_SDK/
+        (Get-Content JsonProviderTests/OSLC4Net.Core.JsonProviderTests.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content JsonProviderTests/OSLC4Net.Core.JsonProviderTests.csproj
+        (Get-Content OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+        (Get-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
+      run: dotnet test --no-build --framework ${{ matrix.version.target }} --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
