--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build-dotnet:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
         version: [ {setup: '6.x', target: "net6.0"}, {setup: '7.x', target: "net7.0"}, {setup: '8.x', target: "net7.0"}]
@@ -45,4 +46,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --framework ${{ matrix.version.target }} --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
+      run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
