fix: re-add OSLC4Net.Core.JsonProvider to the solution (#109)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ on:
 jobs:
   build-dotnet:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        version: ['6.x', '7.x', '8.x']
+        version: [ {setup: '6.x', target: "net6.0"}, {setup: '7.x', target: "net7.0"}, {setup: '8.x', target: "net8.0"}]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -27,7 +28,19 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: ${{ matrix.version }}
+        dotnet-version: ${{ matrix.version.setup }}
+    - name: Target ${{ matrix.version.target }} only
+      shell: pwsh
+      run: |
+        (Get-Content JsonProviderTests/OSLC4Net.Core.JsonProviderTests.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content JsonProviderTests/OSLC4Net.Core.JsonProviderTests.csproj
+        (Get-Content OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+        (Get-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj) | 
+          ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+          Set-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
