build: update branch names
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/.github/workflows/netframework.yml
+++ b/.github/workflows/netframework.yml
@@ -3,9 +3,9 @@ name: 'CI (.NET Framework)'
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 'main', 'master' ]
   pull_request:
-    branches: [ master ]
+    branches: [ 'main', 'master' ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
