--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ 'main', 'master' ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ 'main', 'master' ]
 
 jobs:
   build-dotnet:
