--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ Local.testsettings
 **/packages/
 **/.vs/
 
+.idea/
 
 # Created by http://www.gitignore.io
 
@@ -145,7 +146,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
