--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,6 @@ jobs:
       run: |
         dotnet pack -c Release --version-suffix "ts.$(Get-Date -Format 'yyyyMMddHHmm')" -o ./nupkg_out
         dotnet nuget push '.\nupkg_out\*.nupkg' --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate --no-symbols
-      if: success() && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest' && ${{ github.ref == 'refs/heads/b-nuget_gh_push' }}
+      if: |
+        success() && github.ref == 'refs/heads/main'
+        && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
