--- a/OSLC4Net_SDK/Directory.Build.props
+++ b/OSLC4Net_SDK/Directory.Build.props
@@ -18,4 +18,7 @@
   <PropertyGroup>
     <LangVersion>10</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+  </PropertyGroup>
 </Project>
