--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         show-progress: false
-        cache: true
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -47,6 +46,15 @@ jobs:
         (Get-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj) |
           ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
           Set-Content OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj
+    - name: Cache NuGet
+      # id: cache-nuget
+      uses: actions/cache@v3
+      # env:
+      #   cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ${{ env.NUGET_PACKAGES }}
+        key: ${{ runner.os }}-nuget-${{ matrix.version.target }}-${{ hashFiles('.github/workflows/main.yml', '**/Directory.Build.props', '**/packages.config', '**/packages.lock.json', '**/*.sln', '**/*.csproj') }}
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
