--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
         source-url: https://nuget.pkg.github.com/oslc/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: Install coverlet.collector
+      shell: pwsh
+      run: |
+        dotnet add package coverlet.collector
     - name: Target ${{ matrix.version.target }} only
       shell: pwsh
       run: |
@@ -60,7 +64,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired
+      run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired --collect:"OSLC4Net code coverage"
     # - name: Set version suffix
     #   id: version
     #   run: echo "::set-output name=suffix::$(date +'-ts.%y%m%d%H%M')"
