--- a/OSLC4Net_SDK/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\OSLC4Net.Core.Query\OSLC4Net.Core.Query.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="log4net">
       <Version>2.0.15</Version>
     </PackageReference>
