--- a/OSLC4Net_SDK/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
@@ -13,12 +13,11 @@
     <PackageReference Include="log4net">
       <Version>2.0.15</Version>
     </PackageReference>
-    <PackageReference Include="MSTest.TestAdapter">
-      <Version>3.2.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="MSTest.TestFramework">
-      <Version>3.2.1</Version>
+    <PackageReference Include="xunit" Version="2.7.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 </Project>
