--- a/OSLC4Net_SDK/OSLC4Net.Client.RestSharp/OSLC4Net.Client.RestSharp.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client.RestSharp/OSLC4Net.Client.RestSharp.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj" />
+    <ProjectReference
+      Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj" />
   </ItemGroup>
 
 </Project>
