--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
       if: |
         success() && github.ref == 'refs/heads/main'
         && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
-        && github.event_name != 'release'
+        && ! (github.event_name == 'release' || inputs.release )
     - name: Pack NuGet packages (release)
       shell: pwsh
       run: |
